# Bangumi-syncer

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  bangumi_mapping.json  bangumi_sync.py  codecov.yml  config.example.ini  config.ini  entrypoint.sh  package-lock.json  package.json  playwright.config.py  pyproject.toml  requirements.txt  start.bat  tsconfig.json  version.py
.githooks/: install.bat  install.sh  pre-commit
.github/: pull-request-template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  documentation.yml  feature_request.yml  optimization.yml
.github/workflows/: ci-tests.yml  ci.yml  docker-build-test.yml  docker-build.yml  docker-bulid-test.yml  docker-bulid.yml  docs.yml  lint.yml  release-drafter.yml  release-zip.yml
SDD/: spec.md
app/: __init__.py  main.py
app/api/: __init__.py  app_release.py  auth.py  bgm_poster.py  config.py  deps.py  feiniu.py  fongmi.py  health.py  inbox.py  llm.py  logs.py  mappings.py  notification.py  pages.py  proxy.py  summary.py  summary_jobs.py  sync.py  trakt.py  upgrade.py
app/core/: __init__.py  app_version.py  config.py  config_secret_crypto.py  database.py  logging.py  public_url.py  security.py  startup_info.py  web_templates.py
app/models/: __init__.py  auth.py  config.py  inbox.py  summary.py  sync.py  trakt.py
app/services/: __init__.py  inbox_service.py  mapping_service.py  sync_service.py  upgrade_service.py
app/utils/: __init__.py  announcements_fetcher.py  bangumi_api.py  bangumi_data.py  bgm_image_url.py  bgm_poster_service.py  data_util.py  docker_helper.py  github_release.py  http_base.py  http_client.py  inbox_notifications.py  log_grouping.py  media_type_detector.py  notifier.py  release_markdown.py  retry.py  runtime_python.py  semver_util.py
docker/: Dockerfile  requirements.txt
docs/: announcements.json  community.md  configuration.md  features.md  getting-started.md  index.md  intro.md  mapping.md  roadmap.md  troubleshooting.md
docs/.vitepress/: config.ts
docs/development/: agents.md  claude.md  contributing.md  index.md  new-driver-guide.md
docs/quick-start/: docker.md  index.md  synology.md  windows.md
docs/usage/: custom-webhook.md  emby.md  feiniu.md  fongmi.md  index.md  jellyfin.md  plex-webhooks.md  tautulli.md  trakt.md
scripts/: sync-dev-docs.mjs
static/css/: style.css  version-banner.css
static/js/: app.js  chart.js  inbox.js  logs.js  upgrade.js  version-release.js
templates/: base.html  config.html  dashboard.html  debug.html  email_notification.html  login.html  logs.html  mappings.html  match_records.html  pending_candidates.html  records.html  test_config_fix.html
templates/trakt/: auth_error.html  auth_success.html  config.html
tests/: conftest.py  test_app_version.py  test_comprehensive_final.py  test_main.py  test_matching_comparison.py  test_method_coverage.py  test_version.py
tests/api/: test_app_release.py  test_app_release_api.py  test_app_release_prerelease.py  test_auth.py  test_bgm_poster.py  test_config.py  test_config_crypto.py  test_config_multi_accounts_crypto.py  test_daily_use_features.py  test_deps.py  test_endpoints.py  test_feiniu.py  test_fongmi.py  test_general.py  test_general_extended.py  test_inbox.py  test_logs_comprehensive.py  test_logs_extended.py  test_mappings_comprehensive.py  test_more_endpoints.py  test_notification.py  test_notification_crypto.py  test_pages.py  test_pages_full.py  test_pages_guest_and_redirects.py  test_proxy_comprehensive.py  (+6 more)
utils/: bangumi_api.py  bangumi_data.py  configs.py  data_util.py
(+184 files in other folders)
